<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.CreatePollActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBarCreatePoll"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:title="@string/str_create_a_poll" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_15sdp"
            android:orientation="vertical"
            tools:context=".activity.CreatePollActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/str_poll_question"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etQuestion"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:autofillHints="none"
                android:hint="@string/str_ask_a_question"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/str_answer_options"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvRemainingCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="You can add 5 more options." />

            <Button
                android:id="@+id/btnAddOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                android:drawableStart="@drawable/baseline_add_circle_outline_24"
                android:text="@string/str_add_option" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                tools:itemCount="5"
                tools:listitem="@layout/item_create_poll_option_layout" />

            <Button
                android:id="@+id/btnCreatePoll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/str_create_poll" />

        </LinearLayout>

    </LinearLayout>

</layout>