<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_margin="@dimen/_5sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/dragHandle"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/str_option_drag_handle"
            android:src="@drawable/baseline_drag_handle_24"
            app:tint="@color/color_grey" />

        <EditText
            android:id="@+id/optionEditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_7sdp"
            android:layout_weight="1"
            android:autofillHints="none"
            android:hint="@string/str_option_hint"
            android:inputType="text" />

        <ImageView
            android:id="@+id/removeOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/_15sdp"
            android:contentDescription="@string/str_remove_option"
            android:src="@drawable/baseline_cancel_24"
            app:tint="@color/color_grey" />

    </LinearLayout>

</layout>